; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_locks.c_assign_type.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_locks.c_assign_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_lock = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file_lock*, i32)* @assign_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @assign_type(%struct.file_lock* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.file_lock*, align 8
  %5 = alloca i32, align 4
  store %struct.file_lock* %0, %struct.file_lock** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %11 [
    i32 130, label %7
    i32 128, label %7
    i32 129, label %7
  ]

7:                                                ; preds = %2, %2, %2
  %8 = load i32, i32* %5, align 4
  %9 = load %struct.file_lock*, %struct.file_lock** %4, align 8
  %10 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  br label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %15

14:                                               ; preds = %7
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %14, %11
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
